--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">apperitivoGMM</string>
+    <string name="titolo_login">Accedi al portale di gestione di APPeritivo</string>
+    <string name="bottone_accesso">Accedi</string>
+    <string name="bottone_creazione">Crea nuovo profilo</string>
+    <string name="bottone_registrati"> Registrati</string>
+    <string name="nome">Nome...</string>
+    <string name="cognome">Cognome...</string>
+    <string name="numtel">Numero di telefono...</string>
+    <string name="login_link">Torna a login</string>
 </resources>
