--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="cognome">Cognome...</string>
     <string name="numtel">Numero di telefono...</string>
     <string name="login_link">Torna a login</string>
+    <string name="conferma_ordine">Conferma</string>
 </resources>
