Aggiunta modifica quantita in conferma ordine. Manca solo da inserire tali dati nel database e abbiamo concluso il tutto in java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="numtel">Numero di telefono...</string>
     <string name="conferma_ordine">Conferma</string>
     <string name="title_activity_conferma_ordine">ConfermaOrdineActivity</string>
+    <string name="conferma">Modifica e Invia ordine</string>
 </resources>
