--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="conferma_ordine">Conferma</string>
     <string name="title_activity_conferma_ordine">ConfermaOrdineActivity</string>
     <string name="conferma">Modifica e Invia ordine</string>
+    <string name="invia_ordine">Invia ordine</string>
 </resources>
