--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">apperitivoGMM</string>
     <string name="titolo_login">Accedi al portale di gestione di APPeritivo</string>
     <string name="bottone_accesso">Accedi</string>
-    <string name="bottone_creazione">Crea nuovo profilo</string>
+
     <string name="bottone_registrati"> Registrati</string>
     <string name="nome">Nome...</string>
     <string name="cognome">Cognome...</string>
@@ -13,4 +13,5 @@
     <string name="invia_ordine">Invia ordine</string>
     <string name="title_activity_vedi_ordini">VediOrdiniActivity</string>
     <string name="torna_tavolo">Torna a tavoli</string>
+    <string name="nuovo_profilo">Crea nuovo profilo</string>
 </resources>
